--- a/src/components/Detail/UpdateForm.module.scss
+++ b/src/components/Detail/UpdateForm.module.scss
@@ -10,22 +10,7 @@
   width: 75%;
 
   @media (min-width: $screen-md-min) {
-    flex-direction: row;
-    align-items: flex-start;
     width: 100%;
-  }
-}
-
-.infoBox {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 13rem;
-  height: 100%;
-  gap: 1rem;
-
-  @media (min-width: $screen-md-min) {
-    width: 50%;
   }
 }
 
@@ -34,44 +19,78 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   width: 90%;
   height: 100%;
-  padding: 1rem;
-  background-color: $hornblende-green;
   border-radius: 10px;
   color: $translucent-silk;
 
   @media (min-width: $screen-md-min) {
+    width: 51%;
     flex-direction: row;
-    align-items: flex-start;
-    width: 50%;
   }
 }
+
+.input {
+  width: 8rem;
+  border: none;
+  border-bottom: 1px solid $translucent-silk;
+  border-radius: 2px;
+  background-color: inherit;
+
+  &:focus {
+    outline: 1px solid $translucent-silk;
+  }
+}
+
+.infoBox {
+  display: flex;
+}
+
+.text {
+  text-wrap: nowrap;
+}
+
 .done {
-  border: 1px hidden $translucent-silk;
-  border-radius: 10px;
-  font-size: 1rem;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.2rem;
+  background-color: inherit;
+  border: 1px solid $translucent-silk;
+  border-radius: 8px;
   cursor: pointer;
 
   &:hover {
-    border: 1px solid $severely-burnt-toast;
+    background-color: $translucent-silk;
   }
+}
 
-  @media (min-width: $screen-md-min) {
-    width: 2.5rem;
-    height: 2.5rem;
+.submitRecord {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: inherit;
+  background-image: url('../Dashboard/img/check.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+
+  &:hover {
+    background-image: url('../Dashboard/img/darkCheck.svg');
   }
 }
 
 .warningBox {
   height: 1rem;
   margin-top: 1rem;
-  color: $pumping-spice;
+  color: $hornblende-green;
   font-size: 1rem;
 
   @media (min-width: $screen-md-min) {
     height: 2rem;
     font-size: 1.4rem;
   }
+}
+
+.hidden {
+  display: none;
 }
